T2/LAParser.py
# Generated from LA.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LAParser ( Parser ):

    grammarFileName = "LA.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'algoritmo'", "'fim_algoritmo'", "'declare'", 
                     "'constante'", "':'", "'='", "'tipo'", "','", "'.'", 
                     "'['", "']'", "'literal'", "'inteiro'", "'real'", "'logico'", 
                     "'^'", "'verdadeiro'", "'falso'", "'registro'", "'fim_registro'", 
                     "'procedimento'", "'('", "')'", "'fim_procedimento'", 
                     "'funcao'", "'fim_funcao'", "'var'", "'leia'", "'escreva'", 
                     "'se'", "'entao'", "'senao'", "'fim_se'", "'caso'", 
                     "'seja'", "'fim_caso'", "'para'", "'<-'", "'ate'", 
                     "'faca'", "'fim_para'", "'enquanto'", "'fim_enquanto'", 
                     "'retorne'", "'..'", "'-'", "'nao'", "'<>'", "'>='", 
                     "'<='", "'>'", "'<'", "'+'", "'*'", "'/'", "'%'", "'&'", 
                     "'ou'", "'e'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "NUM_INT", "NUM_REAL", "CADEIA", "IDENT", "COMENTARIO", 
                      "WS", "COMENTARIO_NAO_FECHADO", "CADEIA_NAO_FECHADA", 
                      "ERRO" ]

    RULE_programa = 0
    RULE_declaracoes = 1
    RULE_decl_local_global = 2
    RULE_declaracao_local = 3
    RULE_variavel = 4
    RULE_identificador = 5
    RULE_dimensao = 6
    RULE_tipo = 7
    RULE_tipo_basico = 8
    RULE_tipo_basico_ident = 9
    RULE_tipo_estendido = 10
    RULE_valor_constante = 11
    RULE_registro = 12
    RULE_declaracao_global = 13
    RULE_parametro = 14
    RULE_parametros = 15
    RULE_corpo = 16
    RULE_cmd = 17
    RULE_cmdLeia = 18
    RULE_cmdEscreva = 19
    RULE_cmdSe = 20
    RULE_cmdCaso = 21
    RULE_cmdPara = 22
    RULE_cmdEnquanto = 23
    RULE_cmdFaca = 24
    RULE_cmdAtribuicao = 25
    RULE_cmdChamada = 26
    RULE_cmdRetorne = 27
    RULE_selecao = 28
    RULE_item_selecao = 29
    RULE_constantes = 30
    RULE_numero_intervalo = 31
    RULE_op_unario = 32
    RULE_expressao = 33
    RULE_termo_logico = 34
    RULE_fator_logico = 35
    RULE_parcela_logica = 36
    RULE_exp_relacional = 37
    RULE_op_relacional = 38
    RULE_exp_aritmetica = 39
    RULE_termo = 40
    RULE_fator = 41
    RULE_op1 = 42
    RULE_op2 = 43
    RULE_op3 = 44
    RULE_parcela = 45
    RULE_parcela_unario = 46
    RULE_parcela_nao_unario = 47
    RULE_op_logico_1 = 48
    RULE_op_logico_2 = 49

    ruleNames =  [ "programa", "declaracoes", "decl_local_global", "declaracao_local", 
                   "variavel", "identificador", "dimensao", "tipo", "tipo_basico", 
                   "tipo_basico_ident", "tipo_estendido", "valor_constante", 
                   "registro", "declaracao_global", "parametro", "parametros", 
                   "corpo", "cmd", "cmdLeia", "cmdEscreva", "cmdSe", "cmdCaso", 
                   "cmdPara", "cmdEnquanto", "cmdFaca", "cmdAtribuicao", 
                   "cmdChamada", "cmdRetorne", "selecao", "item_selecao", 
                   "constantes", "numero_intervalo", "op_unario", "expressao", 
                   "termo_logico", "fator_logico", "parcela_logica", "exp_relacional", 
                   "op_relacional", "exp_aritmetica", "termo", "fator", 
                   "op1", "op2", "op3", "parcela", "parcela_unario", "parcela_nao_unario", 
                   "op_logico_1", "op_logico_2" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    NUM_INT=60
    NUM_REAL=61
    CADEIA=62
    IDENT=63
    COMENTARIO=64
    WS=65
    COMENTARIO_NAO_FECHADO=66
    CADEIA_NAO_FECHADA=67
    ERRO=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracoes(self):
            return self.getTypedRuleContext(LAParser.DeclaracoesContext,0)


        def corpo(self):
            return self.getTypedRuleContext(LAParser.CorpoContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = LAParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.declaracoes()
            self.state = 101
            self.match(LAParser.T__0)
            self.state = 102
            self.corpo()
            self.state = 103
            self.match(LAParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracoesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl_local_global(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAParser.Decl_local_globalContext)
            else:
                return self.getTypedRuleContext(LAParser.Decl_local_globalContext,i)


        def getRuleIndex(self):
            return LAParser.RULE_declaracoes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracoes" ):
                listener.enterDeclaracoes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracoes" ):
                listener.exitDeclaracoes(self)




    def declaracoes(self):

        localctx = LAParser.DeclaracoesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaracoes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 35651736) != 0):
                self.state = 105
                self.decl_local_global()
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_local_globalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao_local(self):
            return self.getTypedRuleContext(LAParser.Declaracao_localContext,0)


        def declaracao_global(self):
            return self.getTypedRuleContext(LAParser.Declaracao_globalContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_decl_local_global

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl_local_global" ):
                listener.enterDecl_local_global(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl_local_global" ):
                listener.exitDecl_local_global(self)




    def decl_local_global(self):

        localctx = LAParser.Decl_local_globalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl_local_global)
        try:
            self.state = 113
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 4, 7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.declaracao_local()
                pass
            elif token in [21, 25]:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.declaracao_global()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_localContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variavel(self):
            return self.getTypedRuleContext(LAParser.VariavelContext,0)


        def IDENT(self):
            return self.getToken(LAParser.IDENT, 0)

        def tipo_basico(self):
            return self.getTypedRuleContext(LAParser.Tipo_basicoContext,0)


        def valor_constante(self):
            return self.getTypedRuleContext(LAParser.Valor_constanteContext,0)


        def tipo(self):
            return self.getTypedRuleContext(LAParser.TipoContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_declaracao_local

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_local" ):
                listener.enterDeclaracao_local(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_local" ):
                listener.exitDeclaracao_local(self)




    def declaracao_local(self):

        localctx = LAParser.Declaracao_localContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaracao_local)
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.match(LAParser.T__2)
                self.state = 116
                self.variavel()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.match(LAParser.T__3)
                self.state = 118
                self.match(LAParser.IDENT)
                self.state = 119
                self.match(LAParser.T__4)
                self.state = 120
                self.tipo_basico()
                self.state = 121
                self.match(LAParser.T__5)
                self.state = 122
                self.valor_constante()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 124
                self.match(LAParser.T__6)
                self.state = 125
                self.match(LAParser.IDENT)
                self.state = 126
                self.match(LAParser.T__4)
                self.state = 127
                self.tipo()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariavelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identificador(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAParser.IdentificadorContext)
            else:
                return self.getTypedRuleContext(LAParser.IdentificadorContext,i)


        def tipo(self):
            return self.getTypedRuleContext(LAParser.TipoContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_variavel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariavel" ):
                listener.enterVariavel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariavel" ):
                listener.exitVariavel(self)




    def variavel(self):

        localctx = LAParser.VariavelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variavel)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.identificador()
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 131
                self.match(LAParser.T__7)
                self.state = 132
                self.identificador()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 138
            self.match(LAParser.T__4)
            self.state = 139
            self.tipo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentificadorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(LAParser.IDENT)
            else:
                return self.getToken(LAParser.IDENT, i)

        def dimensao(self):
            return self.getTypedRuleContext(LAParser.DimensaoContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_identificador

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentificador" ):
                listener.enterIdentificador(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentificador" ):
                listener.exitIdentificador(self)




    def identificador(self):

        localctx = LAParser.IdentificadorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_identificador)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(LAParser.IDENT)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9:
                self.state = 142
                self.match(LAParser.T__8)
                self.state = 143
                self.match(LAParser.IDENT)
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 149
            self.dimensao()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp_aritmetica(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAParser.Exp_aritmeticaContext)
            else:
                return self.getTypedRuleContext(LAParser.Exp_aritmeticaContext,i)


        def getRuleIndex(self):
            return LAParser.RULE_dimensao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDimensao" ):
                listener.enterDimensao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDimensao" ):
                listener.exitDimensao(self)




    def dimensao(self):

        localctx = LAParser.DimensaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_dimensao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 151
                self.match(LAParser.T__9)
                self.state = 152
                self.exp_aritmetica()
                self.state = 153
                self.match(LAParser.T__10)
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def registro(self):
            return self.getTypedRuleContext(LAParser.RegistroContext,0)


        def tipo_estendido(self):
            return self.getTypedRuleContext(LAParser.Tipo_estendidoContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)




    def tipo(self):

        localctx = LAParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_tipo)
        try:
            self.state = 162
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19]:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.registro()
                pass
            elif token in [12, 13, 14, 15, 16, 63]:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self.tipo_estendido()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tipo_basicoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LAParser.RULE_tipo_basico

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo_basico" ):
                listener.enterTipo_basico(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo_basico" ):
                listener.exitTipo_basico(self)




    def tipo_basico(self):
